# scientific-newsletter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: newsletter.example.yaml
data/: sent_papers.example.json
docs/: api-keys.md  apis-and-workflow.md  beampath-post.md  beampath-step-by-step.md  customizing-topics.md  scheduling.md  sending-email.md  setup.md
examples/: example-newsletter.html
src/scientific_newsletter/: __init__.py  cli.py  config.py  discovery.py  draft.py  emailer.py  prepare.py  quality.py  registry.py  render.py  scheduler.py  setup_wizard.py
tests/: test_cli.py  test_config_setup.py  test_discovery.py  test_prepare_quality_render.py
tests/fixtures/: papers.json
