[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-newsletter"
version = "0.1.0"
description = "A clinician-friendly, configurable scientific newsletter generator."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Scientific Newsletter Contributors"}
]
keywords = ["newsletter", "medicine", "research", "clinicians", "pubmed", "codex"]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
scientific-newsletter = "scientific_newsletter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
